# puffin-trader

./: .gitignore  README.md
BinanceDeltaServer/: .gitignore  BinanceDeltaServer.sln
BinanceDeltaServer/BinanceDeltaServer/: BinanceConstants.h  BinanceDeltaServer.cpp  BinanceDeltaServer.vcxproj  BinanceDeltaServer.vcxproj.filters  BinanceWebSocket.cpp  BinanceWebSocket.h  Server.cpp  TickData.cpp  TickData.h
BitBackend/: CMakeLists.txt  CMakePresets.json  CMakeSettings.json
BitBackend/BitBackend/: BitBackend.cpp  ByBitAuthentication.cpp  ByBitAuthentication.h  ByBitConfig.h  ByBitRest.cpp  ByBitRest.h  ByBitWebsocket.cpp  ByBitWebsocket.h  CMakeLists.txt  Common.cpp  Common.h  OrderBook.cpp  OrderBook.h  OrderManager.cpp  OrderManager.h  Portfolio.cpp  Portfolio.h  README  Symbols.cpp  Symbols.h  precompiled_headers.h
BitBackend/BitBackend/BitLib/: DateTime.cpp  DateTime.h  Logger.cpp  Logger.h  Uuid.cpp  Uuid.h
BitBackend/BitBackend/BitLib/json11/: json11.cpp
BitBackend/BitBackend/BitLib/stduuid/: uuid.h
BitBackend/BitBackend/Scripts/: Symbols.template  make_symbols.py
BitBase/: BitBase.sln
BitBase/BitBase/: .gitignore  Binance.cpp  Binance.h  BinanceAuthentication.cpp  BinanceInterval.cpp  BinanceInterval.h  BinanceLive.cpp  BinanceLive.h  BinanceRestApi.cpp  BinanceRestApi.h  BinanceTick.cpp  BinanceTick.h  BitBase.cpp  BitBase.vcxproj  BitBase.vcxproj.filters  BitBaseConstants.h  Bitmex.cpp  Bitmex.h  BitmexDaily.cpp  BitmexDaily.h  BitmexInterim.cpp  BitmexInterim.h  BitmexInterval.cpp  BitmexInterval.h  BitmexLive.cpp  BitmexLive.h  Coinbase.cpp  Coinbase.h  CoinbaseAuthentication.cpp  CoinbaseInterval.cpp  CoinbaseInterval.h  CoinbaseLive.cpp  CoinbaseLive.h  CoinbasePro.cpp  CoinbasePro.h  CoinbaseProAuthentication.cpp  CoinbaseProInterval.cpp  CoinbaseProInterval.h  CoinbaseProLive.cpp  CoinbaseProLive.h  (+29 more)
BitBot/: .gitignore  BitBot.sln  binance_account.py  binance_live_trader.py  bitbot.py  market_state.py  plotter.py  position.py  position_live.py  regime_learn.ipynb  regime_learn.py  regime_make_data.ipynb  regime_make_data.py  regime_plotter.py  regime_predict.py  regime_trader.py  runner_plot.py  slopes.py  slopes_plot.py
BitBot/BinanceSim/: binance_simulator.py
BitBot/BitBot/: BinanceAuthentication.cpp  BinanceDownloadKlines.cpp  BinanceKlines.cpp  BinanceKlines.h  BinanceRestApi.cpp  BitBot.cpp  BitBot.vcxproj  BitBot.vcxproj.filters  BitLib  (+11 more)
BitBot_Live_v1/: .gitignore
BitBow/: .gitignore  README.md  bands.py  drawdown.py  make_data.py  make_intrinsic_time_data.py  plot_intrinsic_time.py  plot_rainbow.py  puffin.py  rainbow.py  trade.py
BitCounter/TrainingData/: CMakeLists.txt
BitCounter/TrainingData/TrainingData/: CMakeLists.txt  Config.h  DelayedKlines.cpp  DelayedKlines.h  Indicators.cpp  Indicators.h  IntrinsicEvents.cpp  IntrinsicEvents.h  Symbols.h  TickData.cpp  TickData.h  TrainingData.cpp  TrainingData.h  precompiled_headers.h
BitCounter/TrainingData/TrainingData/BitLib/: DateTime.h  Logger.cpp  Logger.h  csv.h
BitCounter/TrainingData/TrainingData/BitLib/date/: date.h
BitLib/: AggTicks.cpp  AggTicks.h  BitBaseClient.cpp  BitBaseClient.h  BitBotConstants.h  DateTime.cpp  DateTime.h  Intervals.cpp  Intervals.h  Logger.cpp  Logger.h  Ticks.cpp  Ticks.h  Utils.cpp  Utils.h
BitLow/: README.md  analyse_volatility.py  binance_kline_server.py  calibrate_leverage.py  download.py  filter_by_volume.py  make_intrinsic_time.py  simulator.py  test.py
BitMin/: .gitignore  BitMin.sln
BitNet/: .gitignore  README.md  binance_account.py  bitnet_kline_server.py  cache.py  countlog_test.py  delta_control.py  download.py  evaluate_predictions.py  filter_by_volume.py  hej.csv  learn.ipynb  learn2.ipynb  learn_sections.ipynb  live_plot.py  live_trader.py  live_trader_logging.py  main.py  make_indicators.py  make_intrinsic_events.py  make_prediction_thresholds.py  make_predictions.py  make_training_data.py  plot_prediction_positions.py  prediction_filter.py  simulator.py  simulator_plot.py  test.py  test_baseline.py  test_plot_ie.py  test_prediction_filter.py
BitNetLiveV1/: .gitignore  README.md  bybit_account.py  live_trader.py  make_test_klines.py  phemex_account.py  test_bybit_account.py  train_model.py
BitSim/: .gitignore  BitSim.sln
BitStair/: .gitignore  binance_account.py  binance_kline_server.py  config.json  download.py  live_trader.py  make_indicators.py  optimize_delta.py  optimize_delta_plot.py  simulator.py
BitTer/: .gitignore  main.py  make_data.py  measure_delta.py  muzero.py  plot_data.py  plot_log.py  plot_tmvr.py  plot_tmvr_hist.py
BitTest/: BitTest.sln
BitTrend/: ie_scatter.py  live_plotter.py  make_data.py  regime.py
BitWave/: download.py
BitZero/: .gitignore  bitmex_sim_test.py  main.py  make_data.py
BitmexDeltaServer/: BitmexDeltaServer.sln
BitmexOrderBookServer/: BitmexOrderBookServer.sln
CoinbaseDeltaServer/: CoinbaseDeltaServer.sln
CoinbaseProDeltaServer/: CoinbaseProDeltaServer.sln
Counter/: .gitignore  bybit_simulator.py  environment.py  indicators.py  make_data.py  test.py  test2.py  train.py
OldBitBot/: .gitignore  binance_live_trader.py  bitbot.py  make_data.py  position.py  regime_learn.ipynb  regime_learn.py  regime_make_data.ipynb  regime_make_data.py  regime_plotter.py  runner_plot.py  slopes.py  tcn_make_data.py  test.py
WatchDog/: .gitignore  main.py
database/: bitmex_authenticator.py  bitmex_get_daily.py  bitmex_intervals.py  bitmex_make_minute_data.py  bitmex_raw.py  h5tutr_dset.h5  token_db.py
doc/: bitmex.mcdx  calculations.txt  feature_encoder.odt  simulator.odt
simulator/: Makefile  matching_engine.cpp  matching_engine.h  test.cpp
tmp/: .gitignore  .~lock.simulation.csv#  binance_precision_runner.csv  e_test.py  fe_weights_0529.pt  fe_weights_0893.pt  features_plot.py  github - Shortcut.lnk  learning_rate_plotter.py  market_states.csv  market_states_lengths.csv  measure_observations.py  plot.py  plot_cartpole.py  plot_episode.py  plot_rl_evaluation.py  plot_rl_training.py  plot_simulation.py  plot_trader.py  simulation.csv  websocket_log.txt  websocket_log_4.txt
(+902 files in other folders)
